Commiting folder after sonar qube